# internal/entity/bussiness.go
@@ -20,18 +20,19 @@ type HoursOfOperation struct {
 
 // Business represents the businesses table
 type Business struct {
-	ID               string           `json:"id"`
-	Name             string           `json:"name"`
-	Description      string           `json:"description"`
-	CategoryID       string           `json:"category_id"`
-	Address          string           `json:"address"`
-	Latitude         float64          `json:"latitude"`
-	Longitude        float64          `json:"longitude"`
-	ContactInfo      ContactInfo      `json:"contact_info"`
-	HoursOfOperation HoursOfOperation `json:"hours_of_operation"`
-	OwnerID          string           `json:"owner_id"`
-	CreatedAt        string           `json:"created_at"`
-	UpdatedAt        string           `json:"updated_at"`
+	ID               string               `json:"id"`
+	Name             string               `json:"name"`
+	Description      string               `json:"description"`
+	CategoryID       string               `json:"category_id"`
+	Address          string               `json:"address"`
+	Attachments      []BusinessAttachment `json:"attachments"`
+	Latitude         float64              `json:"latitude"`
+	Longitude        float64              `json:"longitude"`
+	ContactInfo      ContactInfo          `json:"contact_info"`
+	HoursOfOperation HoursOfOperation     `json:"hours_of_operation"`
+	OwnerID          string               `json:"owner_id"`
+	CreatedAt        string               `json:"created_at"`
+	UpdatedAt        string               `json:"updated_at"`
 }
 
 type BusinessList struct {
@@ -43,4 +44,42 @@ type BusinessSingleRequest struct {
 	ID         string `json:"id"`
 	OwnerID    string `json:"owner_id"`
 	CategoryID string `json:"category_id"`
+}
+
+// BusinessCategory defines the structure for the business_categories table
+type BusinessCategory struct {
+	ID        string `json:"id"`
+	Name      string `json:"name"`
+	CreatedAt string `json:"created_at"`
+	UpdatedAt string `json:"updated_at"`
+}
+
+type BusinessCategoryList struct {
+	Items []BusinessCategory `json:"businesses_categories"`
+	Count int                `json:"count"`
+}
+
+type BusinessCategorySingleRequest struct {
+	ID   string `json:"id"`
+	Name string `json:"name"`
+}
+
+// BusinessAttachmentList defines the structure for the list of business attachments
+type BusinessAttachment struct {
+	Id          string `json:"id"`
+	BusinessId  string `json:"-"`
+	FilePath    string `json:"filepath"`
+	ContentType string `json:"content_type"`
+	CreatedAt   string `json:"created_at"`
+	UpdatedAt   string `json:"updated_at"`
+}
+
+type BusinessAttachmentList struct {
+	Items []BusinessAttachment `json:"items"`
+	Count int64                `json:"count"`
+}
+
+type BusinessAttachmentMultipleInsertRequest struct {
+	BusinessId  string               `json:"tweet_id"`
+	Attachments []BusinessAttachment `json:"attachments"`
 }
